--- a/World Simulator/src/main/resources/org/jammor9/worldsim/css/display.css
+++ b/World Simulator/src/main/resources/org/jammor9/worldsim/css/display.css
@@ -1,15 +1,36 @@
 .root {
    prompt-colour: #a04000;
-   heading-colour: #2090c0;
+   heading-colour: white;
+   -fx-background-color: #383838;
 }
 
-.heading-label {
-   -fx-text-fill: heading-colour;
-   -fx-font-size: 32px;
+.label {
+   -fx-text-fill: white;
+   -fx-font-size: 21pt;
+   -fx-padding: 10 10 10 10;
+   -fx-background-color: #262626;
+   -fx-border-color: white;
 }
 
-.prompt-label {
-   -fx-text-fill: prompt-colour;
-   -fx-font-size: 16px;
-   -fx-font-weight: bold;
+.button {
+   -fx-background-color: #262626;
+   -fx-text-fill: white;
+   -fx-font-size: 21pt;
+   -fx-border-color: white;
+   -fx-border-radius: 5%;
+   -fx-background-radius: 15%;
+}
+
+.button:hover {
+   -fx-background-color: white;
+   -fx-text-fill: black;
+   -fx-border-color: #262626;
+}
+
+.list-cell {
+   -fx-background-color: #262626;
+}
+
+.list-cell:filled:selected:focused {
+   -fx-background-color: white;
 }
