--- a/World Simulator/src/main/resources/org/jammor9/worldsim/css/display.css
+++ b/World Simulator/src/main/resources/org/jammor9/worldsim/css/display.css
@@ -34,3 +34,14 @@
 .list-cell:filled:selected:focused {
    -fx-background-color: white;
 }
+
+.popup {
+   -fx-background-color: #262626;
+   -fx-border-color: white;
+   -fx-border-radius: 15%;
+   -fx-background-radius: 20%;
+}
+
+.popup-error-label {
+   -fx-font-size: 11pt;
+}
